# napari-bil-data-viewer

./: .gitignore  LICENSE  MANIFEST.in  README.md  mkdocs.yml  setup.cfg  setup.cfg.bak  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
.napari/: DESCRIPTION.md  DESCRIPTION.md.bak
docs/: index.md
napari-bil-data-viewer/: __init__.py  resolution_change_widget.py
napari-bil-data-viewer/_tests/: test_reader.py
napari_bil_data_viewer/: __init__.py  __init__.py.bak  bil_data_loader_widget.py  dataset_imginfo.json  dataset_info.py  dataset_info_screen.py  dataset_metadata.py  fMOST_datasets.py  fMOST_swc.py  napariBIL_working.py  old_res_change.py  reader.py
napari_bil_data_viewer/_tests/: test_reader.py  test_reader.py.bak
