[metadata]
name = napari-bil-data-viewer

author = Alan M Watson
author_email = alan.watson@pitt.edu
url = https://github.com/brain-image-library/napari-bil-data-viewer
license = BSD-3-Clause
description = Napari plugin for viewing Brain Image Library datasets
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/brain-image-library/napari-bil-data-viewer/issues
    Documentation = https://github.com/brain-image-library/napari-bil-data-viewer#README.md
    Source Code = https://github.com/brain-image-library/napari-bil-data-viewer
    User Support = https://github.com/brain-image-library/napari-bil-data-viewer

[options]
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari[all]
    napari-plugin-engine>=0.1.4
	scikit-image
	fsspec
    requests
	aiohttp
	imagecodecs
	beautifulsoup4
	dask
	neurom==3.2.2
    napari-ome-zarr==0.5.2

[options.entry_points] 
napari.plugin = 
    napari-bil-data-viewer = napari_bil_data_viewer
